2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-location.[ch]: remove clock_location_new_from_env(). Not really
	sure it's a good thing to have (can give pretty wrong results), and
	it's not used.

==================== 2.22.1.1 ====================

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (location_set_current_cb): don't refresh the map if there's
	no map. Fix a crash.

==================== 2.22.1 ====================

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* clock-location.c: (clock_location_is_current): emit the set-current
	signal when changing the current location
	* clock.c: (run_prefs_edit_save): set the new location as current if it
	makes sense

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-sources.c: fix compilation
	(calendar_sources_load_esource_list): complete fix for bug #378854.
	There was a case where the handler wasn't disconnected.

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-sources.c: (calendar_sources_finalize_source_data):
	disconnect the changed signal handler for esource_list. Might fix bug
	#488819.
	Also fix a small GSList leak.

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	Don't show weather information of the last location once it has been
	removed. Fix bug #526300.
	Also fixes the empty space at the left of the clock when there's no
	location.

	* clock.c: (update_panel_weather): show the weather obox only if there
	is at least one location
	(locations_changed): show/hide weather obox if there's locations/no
	location
	(location_weather_updated_cb): add FIXME for later

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	Don't lose weather code when editing a location and changing the
	timezone. Fix bug #522007

	* clock.c: (update_coords_helper): new, from code of update_coords
	(update_coords): updated to use update_coords_helper
	(zone_combo_changed): be a bit more clever and only update fields of
	the window if we have to guess them from the timezone